exit Move exceeds maximum extrusion (0.849mm^2 vs 0.800mm^2): increase max_extrude_cross_section from 0.8 to 1.44 (default for 0.6mm Nozzle)

--- a/printer.cfg
+++ b/printer.cfg
@@ -157,7 +157,7 @@ dir_pin: gpio13                                                     # Add ! if m
 enable_pin: !gpio15
 full_steps_per_rotation: 200                                        # Set to 200 for LDO 1.8° stepper motor, and set to 400 for OMC(StepperOnline) 0.9° stepper motor
 microsteps: 32   
-                                                             # See calibrating rotation_distance on extruders doc
+                                                                    # See calibrating rotation_distance on extruders doc
 #gear_ratio: 50:10                                                  # For Mini Afterburner
 #rotation_distance: 22.23  
 
@@ -171,7 +171,7 @@ heater_pin: gpio22                                                  # LDO Picobi
 ## Use "Generic 3950" for NTC 100k 3950 thermistors
 sensor_type: ATC Semitec 104NT-4-R025H42G                           # LDO Picobilical overrides this setting
 sensor_pin: gpio27                                                  # LDO Picobilical overrides this setting
-#control: pid                                                        # Do PID calibration after initial checks
+#control: pid                                                       # Do PID calibration after initial checks
 #pid_Kp: 28.182
 #pid_Ki: 1.978
 #pid_Kd: 100.397
@@ -179,8 +179,8 @@ min_temp: 0
 max_temp: 295
 min_extrude_temp: 170
 max_extrude_only_distance: 151
-max_extrude_cross_section: 0.8
-pressure_advance: 0.0                                               # See tuning pressure advance doc
+max_extrude_cross_section: 1.44                                     # NozzleDiameter^2*4 (Default)
+pressure_advance: 0.02                                              # Ellis Patternguide, 11.1 (eSun ABS+)
 pressure_advance_smooth_time: 0.040
 
 [tmc2209 extruder]
@@ -556,8 +556,10 @@ gcode:
 #   Use START_PRINT for the slicer starting script - please customize for your slicer of choice
 gcode:
     G28                            ; home all axes
-    ;NOZZLE_PURGE
-    G90                            ; absolute positioning    
+    NOZZLE_PURGE
+    G90                            ; absolute positioning   
+    #G82 E0                        ; zero the extruder
+    #G1 E18.0 F800                 ; extrude the 18mm we retracted after last print
     G1 Z20 F3000                   ; move nozzle away from bed
    
 [gcode_macro END_PRINT]
@@ -713,16 +715,16 @@ shaper_type_x: 2hump_ei
 shaper_freq_y: 83.8
 shaper_type_y: 2hump_ei
 
-#[mcu rpi]
-#serial: /tmp/klipper_host_mcu
+[mcu rpi]
+serial: /tmp/klipper_host_mcu
 
-#[adxl345]
-#cs_pin: rpi:None
+[adxl345]
+cs_pin: rpi:None
 
-#[resonance_tester]
-#accel_chip: adxl345
-#probe_points:
-#    60, 60, 20
+[resonance_tester]
+accel_chip: adxl345
+probe_points:
+    60, 60, 20
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
