--- a/printer.cfg
+++ b/printer.cfg
@@ -87,11 +87,11 @@ uart_pin: gpio9
 tx_pin: gpio8
 uart_address: 0
 interpolate: False
-run_current: 0.7                                                    # Defaulted to 0.5 in LDO config
+run_current: 0.8                                                    # Defaulted to 0.5 in LDO config
 sense_resistor: 0.110
 stealthchop_threshold: 0                                            # Set to 999999 to turn stealthchop on, and 0 to use spreadcycle
 diag_pin: ^gpio4                                                    # use the same pin that was previously the endstop_pin!
-driver_SGTHRS: 95
+driver_SGTHRS: 100
 
 [stepper_y]
 step_pin: gpio6
@@ -104,7 +104,7 @@ full_steps_per_rotation: 200                                        # Set to 400
 endstop_pin: tmc2209_stepper_y:virtual_endstop
 position_endstop: 120
 position_max: 120
-homing_speed: 50                                                    # Can be increased after initial setup, Max 100
+homing_speed: 40                                                    # Can be increased after initial setup, Max 100
 homing_retract_dist: 0
 homing_positive_dir: true
 
@@ -113,7 +113,7 @@ uart_pin: gpio9
 tx_pin: gpio8
 uart_address: 2
 interpolate: False
-run_current: 0.7
+run_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0                                            # Set to 999999 to turn stealthchop on, and 0 to use spreadcycle
 diag_pin: ^gpio3                                                    # use the same pin that was previously the endstop_pin!
@@ -249,7 +249,7 @@ max_temp: 84.0                                                      #Set below 8
 min_temp: 0
 target_temp: 57.0                                                   #Set this to your preferred running temperature
 control: watermark                                                  #Aktivieren/Deaktivieren je nach 'wasserstand'
-max_delta: 10                                                       #Fan turns on/off at 10° over/under target_tep
+max_delta: 2                                                       #Fan turns on/off at 10° over/under target_tep
 off_below: 0.1                                                      #Unter 10% aus
 max_speed: 1.0                                                      #Ggfls auch mit 100%
 min_speed: 0.0                                                      #Kann auch ausgeschaltet werden
@@ -553,13 +553,31 @@ gcode:
 # 
 
 [gcode_macro START_PRINT]
-#   Use START_PRINT for the slicer starting script - please customize for your slicer of choice
+description: Druckstart
+variable_parameter_BED_TEMP: 0
+variable_parameter_EXTRUDER_TEMP: 0
 gcode:
+    {% set BED_TEMP = params.BED_TEMP|default(90)|float %}
+    {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(230)|float %} 
+    M117 M104 S180 (nowait)
+    M104 S180                      ; Extruder (nowait )
+    {% if printer.extruder.temperature < 50 %}
+       M117 M190 50 (wait)
+       M190 S50                    ; Bed heat up ( wait )
+    {% endif %}   
+    M117 M140 S80 (nowait)   
+    M140 S80                       ; Bed heat up ( nowait )
+    M117 M104 S210 (nowait)           
+    M104 S210                      ; Extruder (nowait )
+    M117 Homing...     
     G28                            ; home all axes
+    M117 M109 S{EXTRUDER_TEMP} (wait) 
+    M109 S{EXTRUDER_TEMP}          ; extruder auf Zieltemperatur (wait) 
+    M117 M190 S{BED_TEMP} (wait)
+    M190 S{BED_TEMP}               ; Bed heat up ( wait )     
+    M117 NOZZLE_PURGE     
     NOZZLE_PURGE
     G90                            ; absolute positioning   
-    #G82 E0                        ; zero the extruder
-    #G1 E18.0 F800                 ; extrude the 18mm we retracted after last print
     G1 Z20 F3000                   ; move nozzle away from bed
    
 [gcode_macro END_PRINT]
