END_PRINT: G91 relative BEFORE applying safe_z

--- a/archive/printer-20240209_204832.cfg
+++ b/archive/printer-20240209_204832.cfg
@@ -91,7 +91,7 @@ run_current: 0.8                                                    # Defaulted 
 sense_resistor: 0.110
 stealthchop_threshold: 0                                            # Set to 999999 to turn stealthchop on, and 0 to use spreadcycle
 diag_pin: ^gpio4                                                    # use the same pin that was previously the endstop_pin!
-driver_SGTHRS: 92
+driver_SGTHRS: 93
 
 [stepper_y]
 step_pin: gpio6
@@ -578,11 +578,15 @@ gcode:
     M117 NOZZLE_PURGE     
     NOZZLE_PURGE
     G90                            ; absolute positioning   
+    G1 Z20 F3000                   ; move nozzle away from bed
    
 [gcode_macro END_PRINT]
 #   Use END_PRINT for the slicer ending script - please customize for your slicer of choice
 gcode:
     M400                           ; wait for buffer to clear
+    G92 E0                         ; zero the extruder
+    G1 E-4.0 F3600                 ; retract filament
+    G91                            ; relative positioning
 
     #   Get Boundaries
     {% set max_x = printer.configfile.config["stepper_x"]["position_max"]|float %}
@@ -602,22 +606,21 @@ gcode:
         {% set y_safe = -20.0 %}
     {% endif %}
 
-    {% if printer.toolhead.position.z < (max_z - 20) %}
-        {% set z_safe = 20.0 %}
+    {% if printer.toolhead.position.z < (max_z - 2) %}
+        {% set z_safe = 2.0 %}
     {% else %}
         {% set z_safe = max_z - printer.toolhead.position.z %}
     {% endif %}
 
-    G91                            ; relative positioning
     G0 Z{z_safe} F3600             ; move nozzle up
     G0 X{x_safe} Y{y_safe} F20000  ; move nozzle to remove stringing
     G92 E0                         ; zero the extruder
-    G1 E-23.0 F800                 ; retract filament to be able to easily remove
+    G1 E-18.0 F800                 ; retract filament to be able to easily remove
     G91    
     TURN_OFF_HEATERS
     M107                           ; turn off fan
-
- 
+    G90                            ; absolute positioning
+    G0 X60 Y{max_y} F3600          ; park nozzle at rear
 
 [gcode_macro CHOME]
 description: Homes XYZ axis only if printer is in a non-homed state
@@ -693,7 +696,7 @@ gcode:
   G0 X2.5 Y4 F3000 ; Go to front
   G0 Z0.15 ; Drop to bed
   M83 ; Set extruder to relative mode
-  G1 X80 E40 F300 ; Extrude 40mm of filament in a 8cm line
+  G1 X80 E60 F300 ; Extrude 60mm of filament in a 8cm line
   G1 E-0.5 F400 ; Retract a little
   G1 X85 F4000 ; Quickly wipe away from the filament line
   G1 Z0.3 ; Raise and begin printing.
@@ -752,7 +755,7 @@ probe_points:
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [stepper_z]
-#*# position_endstop = 117.170
+#*# position_endstop = 117.220
 #*#
 #*# [heater_bed]
 #*# control = pid
