--- a/fluidd.cfg
+++ b/fluidd.cfg
@@ -54,28 +54,61 @@ description: Cancel the actual running print
 rename_existing: CANCEL_PRINT_BASE
 gcode:
   ##### get user parameters or use default #####
-  {% set client = printer['gcode_macro _CLIENT_VARIABLE'] | default({}) %}
-  {% set allow_park = client.park_at_cancel | default(false) | lower == 'true' %}
-  {% set retract = client.cancel_retract | default(5.0) | abs %}
+  #{% set client = printer['gcode_macro _CLIENT_VARIABLE'] | default({}) %}
+  #{% set allow_park = client.park_at_cancel | default(false) | lower == 'true' %}
+  #{% set retract = client.cancel_retract | default(5.0) | abs %}
   ##### define park position #####
-  {% set park_x = "" if (client.park_at_cancel_x | default(none) is none)
-            else "X=" ~ client.park_at_cancel_x %}
-  {% set park_y = "" if (client.park_at_cancel_y | default(none) is none)
-            else "Y=" ~ client.park_at_cancel_y %}
-  {% set custom_park = park_x | length > 0 or park_y | length > 0 %}
+  #{% set park_x = "" if (client.park_at_cancel_x | default(none) is none)
+  #          else "X=" ~ client.park_at_cancel_x %}
+  #{% set park_y = "" if (client.park_at_cancel_y | default(none) is none)
+  #          else "Y=" ~ client.park_at_cancel_y %}
+  #{% set custom_park = park_x | length > 0 or park_y | length > 0 %}
   ##### end of definitions #####
   # restore idle_timeout time if needed
   {% if printer['gcode_macro PAUSE'].restore_idle_timeout > 0 %}
     SET_IDLE_TIMEOUT TIMEOUT={printer['gcode_macro PAUSE'].restore_idle_timeout}
   {% endif %}
-  {% if (custom_park or not printer.pause_resume.is_paused) and allow_park %} _TOOLHEAD_PARK_PAUSE_CANCEL {park_x} {park_y} {% endif %}
-  _CLIENT_RETRACT LENGTH={retract}
-  TURN_OFF_HEATERS
+  #{% if (custom_park or not printer.pause_resume.is_paused) and allow_park %} 
+  #  _TOOLHEAD_PARK_PAUSE_CANCEL {park_x} {park_y} 
+  #{% endif %}
+  #_CLIENT_RETRACT LENGTH={retract}
+
   M106 S0
   # clear pause_next_layer and pause_at_layer as preparation for next print
   SET_PAUSE_NEXT_LAYER ENABLE=0
   SET_PAUSE_AT_LAYER ENABLE=0 LAYER=0
   CANCEL_PRINT_BASE
+  # positioning & cleanup
+  M400                           ; wait for buffer to clear
+  #   Get Boundaries, Check end position to determine safe direction to move
+  {% set max_x = printer.configfile.config["stepper_x"]["position_max"]|float %}
+  {% set max_y = printer.configfile.config["stepper_y"]["position_max"]|float %}
+  {% set max_z = printer.configfile.config["stepper_z"]["position_max"]|float %}  
+  {% if printer.toolhead.position.x < (max_x - 20) %}
+      {% set x_safe = 20.0 %}
+  {% else %}
+      {% set x_safe = -20.0 %}
+  {% endif %}
+  {% if printer.toolhead.position.y < (max_y - 20) %}
+      {% set y_safe = 20.0 %}
+  {% else %}
+      {% set y_safe = -20.0 %}
+  {% endif %}
+  {% if printer.toolhead.position.z < (max_z - 20) %}
+      {% set z_safe = 20.0 %}
+  {% else %}
+      {% set z_safe = max_z - printer.toolhead.position.z %}
+  {% endif %}
+
+  G0 Z{z_safe} F3600             ; move nozzle up
+  G0 X{x_safe} Y{y_safe} F20000  ; move nozzle to remove stringing
+  G92 E0                         ; zero the extruder
+  G1 E-22.0 F800                 ; retract filament to be able to easily remove
+  G91    
+  TURN_OFF_HEATERS
+  M107                           ; turn off fan
+  G90                            ; absolute positioning
+  G0 X60 Y{max_y - 10} F3600          ; park nozzle at rear - 10 
 
 [gcode_macro PAUSE]
 description: Pause the actual running print
