Not printer.bed but printer.heater_bed

--- a/printer.cfg
+++ b/printer.cfg
@@ -563,7 +563,7 @@ gcode:
     M104 S180                      ; Extruder (nowait )
     {% if printer.extruder.temperature < 50 %}
        M117 M190 50 (wait)
-       {% if printer.bed.temperature < 50 %}
+       {% if printer.heater_bed.temperature < 50 %}
         M190 S50                    ; Bed heat up ( wait )
        {% endif %}   
     {% endif %}   
@@ -576,10 +576,10 @@ gcode:
     M117 M109 S{EXTRUDER_TEMP} (wait) 
     M109 S{EXTRUDER_TEMP}          ; extruder auf Zieltemperatur (wait) 
     M117 M190 S{BED_TEMP} (wait)
-    M190 S{BED_TEMP}               ; Bed heat up ( wait )     
+    M190 S{BED_TEMP}               ; Bed heat up ( wait )    
+    G90                            ; absolute positioning 
     M117 NOZZLE_PURGE     
-    NOZZLE_PURGE
-    G90                            ; absolute positioning   
+    NOZZLE_PURGE 
    
 [gcode_macro END_PRINT]
 #   Use END_PRINT for the slicer ending script - please customize for your slicer of choice
