idle_timout von 600s auf einen Tag, wegen Runoutsensor

--- a/backup/printer-20240420_095355.cfg
+++ b/backup/printer-20240420_095355.cfg
@@ -695,9 +695,9 @@ gcode:
   G0 X2.5 Y4 F3000 ; Go to front
   G0 Z0.15 ; Drop to bed
   M83 ; Set extruder to relative mode
-  G1 Y84 E40 F300 ; Extrude 40mm of filament in a 8cm line
+  G1 X80 E40 F300 ; Extrude 40mm of filament in a 8cm line
   G1 E-0.5 F400 ; Retract a little
-  G1 X90 F4000 ; Quickly wipe away from the filament line
+  G1 X85 F4000 ; Quickly wipe away from the filament line
   G1 Z0.3 ; Raise and begin printing.
 
 [gcode_macro LIGHT_ON]
@@ -750,20 +750,11 @@ accel_chip: adxl345
 probe_points:
     60, 60, 20
 
- [idle_timeout]
-#gcode:
-#   A list of G-Code commands to execute on an idle timeout. See
-#   docs/Command_Templates.md for G-Code format. The default is to run
-#   "TURN_OFF_HEATERS" and "M84".
-timeout: 86400
-#   Idle time (in seconds) to wait before running the above G-Code
-#   commands. The default is 600 seconds.
-
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [stepper_z]
-#*# position_endstop = 117.055
+#*# position_endstop = 117.155
 #*#
 #*# [heater_bed]
 #*# control = pid
