Anpassungen Filament Runout Sensor

--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -12,7 +12,10 @@ show_cursor: True
 #~# --- Do not edit below this line. This section is auto generated --- #~#
 #~#
 #~# [main]
-#~# language = de_formal
 #~# font_size = large
 #~# use_dpms = False
+#~# show_cursor = True
+#~# print_sort_dir = date_asc
+#~# print_view = list
+#~# language = de_formal
 #~#
