--- a/archive/printer-20240911_181102.cfg
+++ b/archive/printer-20240911_181102.cfg
@@ -432,37 +432,17 @@ sensor_type: temperature_mcu
 min_temp: 0
 max_temp: 95
 
-[filament_switch_sensor FilaSwitch]
-switch_pin: ^gpio16
-pause_on_runout: False
-runout_gcode:
-  {action_respond_info("Filament switch runout")}
-  M117 Filament switch runout
-  PAUSE # [pause resume] is required in printer.cfg
-insert_gcode:
-  M117 Filament switch inserted
-
-[filament_motion_sensor FilaJam]
-switch_pin: ^gpio22 
-#detection_length: 2.88 # accuracy of motion sensor, default 7mm 
-extruder: extruder 
-pause_on_runout: False 
-runout_gcode:
-  {action_respond_info("Filament encoder runout/jam")}
-  M117 Filament encoder runout/jam
-  PAUSE # [pause resume] is required in printer.cfg  
-insert_gcode:
-  M117 Filament encoder inserted
-event_delay: 3.0
-pause_delay: 0.5  
-
-[pause_resume]
-
-## single runout sensor, wie bei LDO vorgesehen
+## FS - Frame PCB
 ## Filament Sensor 1
-#[filament_switch_sensor runout_sensor]
-#switch_pin: gpio16
-#pause_on_runout: True
+[filament_switch_sensor runout_sensor]
+switch_pin: gpio16
+pause_on_runout: True
+
+## SU - Frame PCB
+## Filament Sensor 2
+#[gcode_button filament_sensor_button]
+#pin: umb:gpio18
+# release_gcode: {INSERT YOUR GCODE HERE}
 
 ## Sensorless Homing
 ## This file contains configuration and macros pertaining to sensorless homing for the Voron 0.2 
@@ -783,7 +763,7 @@ timeout: 86400
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [stepper_z]
-#*# position_endstop = 116.900
+#*# position_endstop = 116.825
 #*#
 #*# [heater_bed]
 #*# control = pid
