--- a/moonraker.conf
+++ b/moonraker.conf
@@ -46,3 +46,12 @@ channel: beta
 path: ~/spyglass
 origin: https://github.com/roamingthings/spyglass.git
 managed_services: spyglass
+
+[update_manager KlipperScreen]
+type: git_repo
+path: ~/KlipperScreen
+origin: https://github.com/jordanruthe/KlipperScreen.git
+env: ~/.KlipperScreen-env/bin/python
+requirements: scripts/KlipperScreen-requirements.txt
+install_script: scripts/KlipperScreen-install.sh
+managed_services: KlipperScreen
