idle timeout to 1h

--- a/moonraker.conf
+++ b/moonraker.conf
@@ -24,9 +24,9 @@ cors_domains:
 
 [history]
 
-[update_manager]
-channel: dev
-refresh_interval: 168
+#[update_manager]
+#channel: dev
+#refresh_interval: 168
 
 [update_manager fluidd]
 type: web
