--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -5,7 +5,7 @@
 titlebar_items: chamber_temp
 # Define distances and speeds for the extrude panel. CSV list 2 to 4 integers
 extrude_distances: 10, 50, 100, 120
-extrude_speeds: 5, 7, 8, 9
+extrude_speeds: 2, 3, 4, 5
 
 [main]
 show_cursor: True
@@ -15,7 +15,7 @@ show_cursor: True
 #~# font_size = large
 #~# use_dpms = False
 #~# show_cursor = True
-#~# print_sort_dir = date_asc
+#~# print_sort_dir = date_desc
 #~# print_view = list
 #~# language = de_formal
 #~#
