--- a/moonraker.conf
+++ b/moonraker.conf
@@ -40,12 +40,12 @@ channel: stable
 repo: mainsail-crew/mainsail
 path: ~/mainsail
 
-[update_manager spyglass]
-type: git_repo
-channel: beta
-path: ~/spyglass
-origin: https://github.com/roamingthings/spyglass.git
-managed_services: spyglass
+#[update_manager spyglass]
+#type: git_repo
+#channel: beta
+#path: ~/spyglass
+#origin: https://github.com/roamingthings/spyglass.git
+#managed_services: spyglass
 
 [update_manager KlipperScreen]
 type: git_repo
@@ -55,3 +55,23 @@ env: ~/.KlipperScreen-env/bin/python
 requirements: scripts/KlipperScreen-requirements.txt
 install_script: scripts/KlipperScreen-install.sh
 managed_services: KlipperScreen
+
+# Crowsnest update_manager entry
+[update_manager crowsnest]
+type: git_repo
+path: ~/crowsnest
+origin: https://github.com/mainsail-crew/crowsnest.git
+managed_services: crowsnest
+install_script: tools/pkglist.sh
+
+[update_manager mobileraker]
+type: git_repo
+path: /home/pi/mobileraker_companion
+origin: https://github.com/Clon1998/mobileraker_companion.git
+primary_branch:main
+managed_services: mobileraker
+env: /home/pi/mobileraker-env/bin/python
+requirements: scripts/mobileraker-requirements.txt
+install_script: scripts/install.sh
+
+[include octoeverywhere-system.cfg]
