--- a/printer.cfg
+++ b/printer.cfg
@@ -707,16 +707,16 @@ gcode:
 
 
 [gcode_macro NOZZLE_PURGE]
-description: Draw a purge line at the front left edge of the build plate
+description: Purge line at back of bed (X40 → X118, Y116) – outside print area
 gcode:
   CHOME
-  G0 X2.5 Y4 F3000 ; Go to front
-  G0 Z0.15 ; Drop to bed
-  M83 ; Set extruder to relative mode
-  G1 Y84 E40 F300 ; Extrude 40mm of filament in a 8cm line
-  G1 E-0.5 F400 ; Retract a little
-  G1 X90 F4000 ; Quickly wipe away from the filament line
-  G1 Z0.3 ; Raise and begin printing.
+  G0 X40 Y116 F12000               ; Start: back, 40mm from left (camera-safe)
+  G0 Z0.15 F3000                   ; Drop to purge height
+  M83                              ; Relative extrusion
+  G1 X118 Y116 E40 F600            ; Purge: 40mm filament over EXACTLY 56mm distance
+  G1 E-0.5 F400                    ; Small retract
+  G1 X115 F4000                    ; Wipe away from line
+  G1 Z0.3 F3000                    ; Raise nozzle
 
 [gcode_macro LIGHT_ON]
 variable_delay_ms: 50
@@ -799,9 +799,9 @@ gcode:
         {% set z_safe = max_z - act_z %}
     {% endif %}    
     G91                            ; relative positioning
-    G1 Z{z_safe} F3000             ; move nozzle up 70mm
+    G1 Z{z_safe} F3000             ; move nozzle up z_save 
     G90                            ; absolute positioning
-    G0  X170 Y170 F3600            ; park nozzle in Middle (sagging gantry)
+    G0  X58 Y56 F3600              ; park nozzle in Middle
     NOZZLE_OFF                     ; Duesenbeleuchtung aus
     LOGO_OFF                       ; LED Logobeleuchtung aus
     M117 Print done
