CANCEL_PRINT retract -23 zur Einfachen Filamentenladung

--- a/printer.cfg
+++ b/printer.cfg
@@ -580,17 +580,9 @@ gcode:
     {% set BED_TEMP = params.BED_TEMP|default(90)|float %}
     {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(230)|float %} 
     M117 M104 S180 (nowait)
-    M104 S180                      ; Extruder (nowait )
-    {% if printer.extruder.temperature < 50 %}
-       M117 M190 50 (wait)
-       {% if printer.heater_bed.temperature < 50 %}
-        M190 S50                    ; Bed heat up ( wait )
-       {% endif %}   
-    {% endif %}   
-    M117 M140 S80 (nowait)   
-    M140 S80                       ; Bed heat up ( nowait )
-    M117 M104 S210 (nowait)           
-    M104 S210                      ; Extruder (nowait )
+    M104 S180                      ; Extruder (nowait ) 
+    M117 M140 S60 (nowait)   
+    M140 S60                       ; Bed heat up ( nowait )
     M117 Homing...     
     G28                            ; home all axes
     M117 M109 S{EXTRUDER_TEMP} (wait) 
@@ -710,10 +702,10 @@ gcode:
 description: Purge line at back of bed (X40 → X118, Y116) – outside print area
 gcode:
   CHOME
-  G0 X40 Y116 F12000               ; Start: back, 40mm from left (camera-safe)
+  G0 X117 Y115 F12000               ; Start: back, 40mm from left (camera-safe)
   G0 Z0.15 F3000                   ; Drop to purge height
   M83                              ; Relative extrusion
-  G1 X118 Y116 E40 F600            ; Purge: 40mm filament over EXACTLY 56mm distance
+  G1 X30 Y115 E40 F600             ; Purge: 40mm filament (hinten rechts nach hinten
   G1 E-0.5 F400                    ; Small retract
   G1 X115 F4000                    ; Wipe away from line
   G1 Z0.3 F3000                    ; Raise nozzle
@@ -802,6 +794,7 @@ gcode:
     G1 Z{z_safe} F3000             ; move nozzle up z_save 
     G90                            ; absolute positioning
     G0  X58 Y56 F3600              ; park nozzle in Middle
+    G1 E-23.0 F800                 ; retract filament to be able to easily remove
     NOZZLE_OFF                     ; Duesenbeleuchtung aus
     LOGO_OFF                       ; LED Logobeleuchtung aus
     M117 Print done
