Motoren aus (M84) nach End_print und Cancel_print

--- a/printer.cfg
+++ b/printer.cfg
@@ -629,7 +629,35 @@ gcode:
     G1 E-23.0 F800                 ; retract filament to be able to easily remove
     G91    
     TURN_OFF_HEATERS
+    M84                            ; MOTOR ABSCHALTEN!
     M107                           ; turn off fan
+
+[gcode_macro CANCEL_PRINT]
+description: Den aktuellen Druck abbrechen
+rename_existing: CANCEL_PRINT_BASE
+gcode:
+    SET_IDLE_TIMEOUT TIMEOUT={printer.configfile.settings.idle_timeout.timeout} ; set timeout back to configured value
+    CLEAR_PAUSE
+    SDCARD_RESET_FILE
+    TURN_OFF_HEATERS
+    CANCEL_PRINT_BASE
+    {% set max_z = printer.toolhead.axis_maximum.z|float %}
+    {% set act_z = printer.toolhead.position.z|float %}
+    {% if act_z < (max_z - 70.0) %}
+        {% set z_safe = 70.0 %}
+    {% else %}
+        {% set z_safe = max_z - act_z %}
+    {% endif %}    
+    G91                            ; relative positioning
+    G1 Z{z_safe} F3000             ; move nozzle up z_save 
+    G90                            ; absolute positioning
+    G0  X58 Y56 F3600              ; park nozzle in Middle
+    G1 E-23.0 F800                 ; retract filament to be able to easily remove
+    M84                            ; MOTOR ABSCHALTEN!
+    NOZZLE_OFF                     ; Duesenbeleuchtung aus
+    LOGO_OFF                       ; LED Logobeleuchtung aus
+    M117 Print done
+
 
 [gcode_macro CHOME]
 description: Homes XYZ axis only if printer is in a non-homed state
@@ -773,31 +801,6 @@ timeout: 86400
 # Enable object exclusion
 [exclude_object]
 
-
-[gcode_macro CANCEL_PRINT]
-description: Den aktuellen Druck abbrechen
-rename_existing: CANCEL_PRINT_BASE
-gcode:
-    SET_IDLE_TIMEOUT TIMEOUT={printer.configfile.settings.idle_timeout.timeout} ; set timeout back to configured value
-    CLEAR_PAUSE
-    SDCARD_RESET_FILE
-    TURN_OFF_HEATERS
-    CANCEL_PRINT_BASE
-    {% set max_z = printer.toolhead.axis_maximum.z|float %}
-    {% set act_z = printer.toolhead.position.z|float %}
-    {% if act_z < (max_z - 70.0) %}
-        {% set z_safe = 70.0 %}
-    {% else %}
-        {% set z_safe = max_z - act_z %}
-    {% endif %}    
-    G91                            ; relative positioning
-    G1 Z{z_safe} F3000             ; move nozzle up z_save 
-    G90                            ; absolute positioning
-    G0  X58 Y56 F3600              ; park nozzle in Middle
-    G1 E-23.0 F800                 ; retract filament to be able to easily remove
-    NOZZLE_OFF                     ; Duesenbeleuchtung aus
-    LOGO_OFF                       ; LED Logobeleuchtung aus
-    M117 Print done
 
 [gcode_macro PAUSE]
 description: Den aktuellen Druck pausieren
