Ein Pixel weiter rechts starten, Prime line einen Punkt nach hinten

--- a/printer.cfg
+++ b/printer.cfg
@@ -579,10 +579,10 @@ variable_parameter_EXTRUDER_TEMP: 0
 gcode:
     {% set BED_TEMP = params.BED_TEMP|default(90)|float %}
     {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(230)|float %} 
-    M117 M104 S180 (nowait)
-    M104 S180                      ; Extruder (nowait ) 
-    M117 M140 S60 (nowait)   
-    M140 S60                       ; Bed heat up ( nowait )
+    M117 M104 S{EXTRUDER_TEMP} (nowait)
+    M104 S{EXTRUDER_TEMP}                 ; Extruder (nowait ) 
+    M117 M140 S{BED_TEMP} (nowait)   
+    M140 S{BED_TEMP}                      ; Bed heat up ( nowait )
     M117 Homing...     
     G28                            ; home all axes
     M117 M109 S{EXTRUDER_TEMP} (wait) 
@@ -730,10 +730,10 @@ gcode:
 description: Purge line at back of bed (X40 → X118, Y116) – outside print area
 gcode:
   CHOME
-  G0 X117 Y115 F12000               ; Start: back, 40mm from left (camera-safe)
+  G0 X117 Y116 F12000               ; Start: back, 40mm from left (camera-safe)
   G0 Z0.15 F3000                   ; Drop to purge height
   M83                              ; Relative extrusion
-  G1 X30 Y115 E40 F600             ; Purge: 40mm filament (hinten rechts nach hinten
+  G1 X30 Y116 E40 F600             ; Purge: 40mm filament (hinten rechts nach hinten
   G1 E-0.5 F400                    ; Small retract
   G1 X115 F4000                    ; Wipe away from line
   G1 Z0.3 F3000                    ; Raise nozzle
