CANCEL_PRINT: Reset extruder, NOZZLE_PURGE do not squash that much

--- a/printer.cfg
+++ b/printer.cfg
@@ -181,7 +181,7 @@ min_extrude_temp: 170
 max_extrude_only_distance: 151
 max_extrude_cross_section: 1.44                                     # NozzleDiameter^2*4 (Default)
 pressure_advance: 0.02                                              # Ellis Patternguide, 11.1 (eSun ABS+)
-pressure_advance_smooth_time: 0.040
+pressure_advance_smooth_time: 0.02
 
 [tmc2209 extruder]
 uart_pin: gpio9
@@ -587,7 +587,7 @@ gcode:
     G28                            ; home all axes
     M117 M109 S{EXTRUDER_TEMP} (wait) 
     M109 S{EXTRUDER_TEMP}          ; extruder auf Zieltemperatur (wait) 
-    M117 M190 S{BED_TEMP} (wait)
+    G1 E20.0 F800                  ; retraction rueckgaenging machen
     M190 S{BED_TEMP}               ; Bed heat up ( wait )    
     G90                            ; absolute positioning 
     M117 NOZZLE_PURGE     
@@ -652,6 +652,7 @@ gcode:
     G1 Z{z_safe} F3000             ; move nozzle up z_save 
     G90                            ; absolute positioning
     G0  X58 Y56 F3600              ; park nozzle in Middle
+    G92 E0                         ; zero the extruder
     G1 E-23.0 F800                 ; retract filament to be able to easily remove
     M84                            ; MOTOR ABSCHALTEN!
     NOZZLE_OFF                     ; Duesenbeleuchtung aus
@@ -730,13 +731,13 @@ gcode:
 description: Purge line at back of bed (X40 → X118, Y116) – outside print area
 gcode:
   CHOME
-  G0 X117 Y116 F12000               ; Start: back, 40mm from left (camera-safe)
-  G0 Z0.15 F3000                   ; Drop to purge height
+  G0 X117 Y116 F12000              ; Start: back, 40mm from left (camera-safe)
+  G0 Z0.30 F3000                   ; Drop to purge height
   M83                              ; Relative extrusion
-  G1 X30 Y116 E40 F600             ; Purge: 40mm filament (hinten rechts nach hinten
+  G1 X30 Y116 E35 F600             ; Purge: 35mm filament (hinten rechts nach hinten
   G1 E-0.5 F400                    ; Small retract
   G1 X115 F4000                    ; Wipe away from line
-  G1 Z0.3 F3000                    ; Raise nozzle
+  G1 Z0.4 F3000                    ; Raise nozzle
 
 [gcode_macro LIGHT_ON]
 variable_delay_ms: 50
