START_PRINT: Zero the extruder (weil sonst ein -23mm von START_ oder _END_PRINT dazu fuehrt, dass statt absolut 20mm dann 43mm extrudiert werden

--- a/printer.cfg
+++ b/printer.cfg
@@ -587,6 +587,7 @@ gcode:
     G28                            ; home all axes
     M117 M109 S{EXTRUDER_TEMP} (wait) 
     M109 S{EXTRUDER_TEMP}          ; extruder auf Zieltemperatur (wait) 
+    G92 E0                         ; zero the extruder
     G1 E20.0 F800                  ; retraction rueckgaenging machen
     M190 S{BED_TEMP}               ; Bed heat up ( wait )    
     G90                            ; absolute positioning 
