M109 ueberschrieben, analog zwerg; M104 + WAIT ist schneller

--- a/printer.cfg
+++ b/printer.cfg
@@ -881,6 +881,19 @@ gcode:
         RESUME_BASE                                                ; resume
     {% endif %}
 
+# ──────────────────────────────────────────────────────────────
+# Elegantes M109-Replacement (Ellis-Style) – für Voron + Revo
+# ──────────────────────────────────────────────────────────────
+[gcode_macro M109]
+rename_existing: M99109          # Original bleibt erhalten (falls mal nötig)
+gcode:
+    {% set S = params.S|default(0)|float %}
+    {% if S != 0 %}
+        M104 S{S}                                    ; Temperatur setzen (kein Wait)
+        TEMPERATURE_WAIT SENSOR=extruder MINIMUM={S-0.5} MAXIMUM={S+5}  ; kurz warten bis grob da
+        TEMPERATURE_WAIT SENSOR=extruder MINIMUM={S-1}   MAXIMUM={S+1}   ; dann stabil ±1°C
+    {% endif %}     
+
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
